updated requested changes

--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in Toronto &amp; GTA">
+    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta property="og:description" content="Free in-home consultation, precise measuring and professional installation for custom blinds, shades and curtains in Toronto &amp; the GTA.">
     <meta property="og:url" content="https://captainblinds.com/">
     <meta property="og:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in Toronto &amp; GTA">
+    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta name="twitter:description" content="Custom blinds, shades and curtains with free in-home consultation in Toronto &amp; the GTA.">
     <meta name="twitter:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
@@ -108,18 +108,21 @@
                                     <li class="current"><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                     <li class="dropdown">
-                                        <a href="">Blinds</a>
+                                        <a href="">Products</a>
                                         <ul>
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
+                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
                                             <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>
                                             <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
@@ -133,7 +136,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Book Your Free Consultation</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -158,7 +161,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Call Us</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -182,9 +185,9 @@
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Toronto &amp; GTA</li>
-                        <li><a href="tel:+14379955552">(437) 995-5552</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li>7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7</li>
+                        <li><a href="tel:+14169853839">(416)985-3839</a></li>
+                        <li><a href="mailto:info@captainblinds.com">info@captainblinds.com</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -527,7 +530,7 @@
                             </div>
                             <ul class="info clearfix">
                                 <li>Phone <a href="tel:1258985703">1-258-985-703</a></li>
-                                <li>Email <a href="mailto:info@example.com">info@example.com</a></li>
+                                <li>Email <a href="mailto:info@captainblinds.com">info@captainblinds.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -568,7 +571,7 @@
                                     <div class="widget-content">
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
-                                            <li><a href="index.html">Blinds</a></li>
+                                            <li><a href="index.html">Products</a></li>
                                             <li><a href="index.html">Curtains</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
@@ -579,14 +582,17 @@
                             <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                                 <div class="footer-widget links-widget ml-70">
                                     <div class="widget-title">
-                                        <h3>Blinds</h3>
+                                        <h3>Products</h3>
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links clearfix">                                          
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
+                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
                                             <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>                                    
@@ -602,7 +608,7 @@
                                             <li><a href="graphic.html">Graphic Blinds</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
@@ -627,9 +633,9 @@
 
 
         <!--Scroll to top-->
-        <button class="scroll-top scroll-to-target" data-target="html">
-            <span class="far fa-long-arrow-alt-up"></span>
-        </button>
+        <a class="scroll-top whatsapp-btn" href="https://wa.me/14169853839" target="_blank" rel="noopener">
+            <span class="fab fa-whatsapp"></span>
+        </a>
     </div>
 
 
