--- a/gallery-1.html
+++ b/gallery-1.html
@@ -12,14 +12,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in Toronto &amp; GTA">
+    <meta property="og:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta property="og:description" content="Free in-home consultation, precise measuring and professional installation for custom blinds, shades and curtains in Toronto &amp; the GTA.">
     <meta property="og:url" content="https://captainblinds.com/">
     <meta property="og:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in Toronto &amp; GTA">
+    <meta name="twitter:title" content="CaptainBlinds | Custom Blinds, Shades &amp; Curtains in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta name="twitter:description" content="Custom blinds, shades and curtains with free in-home consultation in Toronto &amp; the GTA.">
     <meta name="twitter:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
 
@@ -107,18 +107,21 @@
                                     <li class="current"><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                     <li class="dropdown">
-                                        <a href="">Blinds</a>
+                                        <a href="">Products</a>
                                         <ul>
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
+                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
                                             <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>
                                             <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization & Smart Home Solutions</a></li>
@@ -132,7 +135,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Book Your Free Consultation</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -157,7 +160,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Call Us</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -181,9 +184,9 @@
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Toronto &amp; GTA</li>
-                        <li><a href="tel:+14379955552">(437) 995-5552</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li>7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7</li>
+                        <li><a href="tel:+14169853839">(416)985-3839</a></li>
+                        <li><a href="mailto:info@captainblinds.com">info@captainblinds.com</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -228,6 +231,7 @@
                             <li class="filter" data-role="button" data-filter=".roller">Roller</li>
                             <li class="filter" data-role="button" data-filter=".silhouette">Silhouette</li>
                             <li class="filter" data-role="button" data-filter=".wood">Wood Blinds</li>
+                            <li class="filter" data-role="button" data-filter=".honeycomb">Honeycomb</li>
                             <li class="filter" data-role="button" data-filter=".dual">Dual Blackout</li>
                             <li class="filter" data-role="button" data-filter=".outdoor">Outdoor</li>
                             <li class="filter" data-role="button" data-filter=".blackout">Blackout</li>
@@ -967,6 +971,129 @@
                             </div>
                         </div>
 
+
+                        <!-- HONEYCOMB -->
+                        <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column all honeycomb">
+                            <div class="project-block-one">
+                                <div class="inner-box">
+                                    <figure class="image-box">
+                                        <img src="assets/images/gallery/honeycomb/1.jpg" alt="">
+                                    </figure>
+                                    <div class="content-box">
+                                        <div class="view-btn"><a href="assets/images/gallery/honeycomb/1.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
+                                        <div class="text">
+                                            <h3>Honeycomb Shades</h3>
+                                            <ul>
+                                                <li><a href="index-2.html">Residential</a></li>
+                                                <li>/</li>
+                                                <li><a href="index-2.html">Commercial</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column all honeycomb">
+                            <div class="project-block-one">
+                                <div class="inner-box">
+                                    <figure class="image-box">
+                                        <img src="assets/images/gallery/honeycomb/2.jpg" alt="">
+                                    </figure>
+                                    <div class="content-box">
+                                        <div class="view-btn"><a href="assets/images/gallery/honeycomb/2.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
+                                        <div class="text">
+                                            <h3>Honeycomb Shades</h3>
+                                            <ul>
+                                                <li><a href="index-2.html">Residential</a></li>
+                                                <li>/</li>
+                                                <li><a href="index-2.html">Commercial</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column all honeycomb">
+                            <div class="project-block-one">
+                                <div class="inner-box">
+                                    <figure class="image-box">
+                                        <img src="assets/images/gallery/honeycomb/3.jpg" alt="">
+                                    </figure>
+                                    <div class="content-box">
+                                        <div class="view-btn"><a href="assets/images/gallery/honeycomb/3.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
+                                        <div class="text">
+                                            <h3>Honeycomb Shades</h3>
+                                            <ul>
+                                                <li><a href="index-2.html">Residential</a></li>
+                                                <li>/</li>
+                                                <li><a href="index-2.html">Commercial</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column all honeycomb">
+                            <div class="project-block-one">
+                                <div class="inner-box">
+                                    <figure class="image-box">
+                                        <img src="assets/images/gallery/honeycomb/4.jpg" alt="">
+                                    </figure>
+                                    <div class="content-box">
+                                        <div class="view-btn"><a href="assets/images/gallery/honeycomb/4.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
+                                        <div class="text">
+                                            <h3>Honeycomb Shades</h3>
+                                            <ul>
+                                                <li><a href="index-2.html">Residential</a></li>
+                                                <li>/</li>
+                                                <li><a href="index-2.html">Commercial</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column all honeycomb">
+                            <div class="project-block-one">
+                                <div class="inner-box">
+                                    <figure class="image-box">
+                                        <img src="assets/images/gallery/honeycomb/5.jpg" alt="">
+                                    </figure>
+                                    <div class="content-box">
+                                        <div class="view-btn"><a href="assets/images/gallery/honeycomb/5.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
+                                        <div class="text">
+                                            <h3>Honeycomb Shades</h3>
+                                            <ul>
+                                                <li><a href="index-2.html">Residential</a></li>
+                                                <li>/</li>
+                                                <li><a href="index-2.html">Commercial</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column all honeycomb">
+                            <div class="project-block-one">
+                                <div class="inner-box">
+                                    <figure class="image-box">
+                                        <img src="assets/images/gallery/honeycomb/6.jpg" alt="">
+                                    </figure>
+                                    <div class="content-box">
+                                        <div class="view-btn"><a href="assets/images/gallery/honeycomb/6.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
+                                        <div class="text">
+                                            <h3>Honeycomb Shades</h3>
+                                            <ul>
+                                                <li><a href="index-2.html">Residential</a></li>
+                                                <li>/</li>
+                                                <li><a href="index-2.html">Commercial</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- OUTDOOR -->
                         <div class="col-lg-3 col-md-6 col-sm-12 masonry-item small-column all outdoor">
                             <div class="project-block-one">
@@ -1228,7 +1355,7 @@
                                     <div class="widget-content">
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
-                                            <li><a href="index.html">Blinds</a></li>
+                                            <li><a href="index.html">Products</a></li>
                                             <li><a href="index.html">Curtains</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
@@ -1239,14 +1366,17 @@
                             <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                                 <div class="footer-widget links-widget ml-70">
                                     <div class="widget-title">
-                                        <h3>Blinds</h3>
+                                        <h3>Products</h3>
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links clearfix">                                          
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
+                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
                                             <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>                                    
@@ -1261,7 +1391,7 @@
                                             <li><a href="graphic.html">Graphic Blinds</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
@@ -1285,9 +1415,9 @@
 
 
         <!--Scroll to top-->
-        <button class="scroll-top scroll-to-target" data-target="html">
-            <span class="far fa-long-arrow-alt-up"></span>
-        </button>
+        <a class="scroll-top whatsapp-btn" href="https://wa.me/14169853839" target="_blank" rel="noopener">
+            <span class="fab fa-whatsapp"></span>
+        </a>
     </div>
 
 
