--- a/roman_blinds.html
+++ b/roman_blinds.html
@@ -13,7 +13,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="CaptainBlinds | Custom Roman Shades in Toronto &amp; GTA">
+    <meta property="og:title" content="CaptainBlinds | Custom Roman Shades in 7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7">
     <meta property="og:description" content="Soft fabric Roman shades with tailored folds, light control from sheer to blackout, and cordless or motorized operation. Custom-made and professionally installed by CaptainBlinds.">
     <meta property="og:url" content="https://captainblinds.com/roman-shades/">
     <meta property="og:image" content="https://captainblinds.com/assets/images/banner/banner-1.jpg">
@@ -108,18 +108,21 @@
                                     <li class="current"><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                     <li class="dropdown">
-                                        <a href="">Blinds</a>
+                                        <a href="">Products</a>
                                         <ul>
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
+                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
                                             <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>
                                             <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
@@ -134,7 +137,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Book Your Free Consultation</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -159,7 +162,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Call Us</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -183,9 +186,9 @@
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Toronto &amp; GTA</li>
-                        <li><a href="tel:+14379955552">(437) 995-5552</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li>7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7</li>
+                        <li><a href="tel:+14169853839">(416)985-3839</a></li>
+                        <li><a href="mailto:info@captainblinds.com">info@captainblinds.com</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -270,7 +273,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="aliminum.html">Aliminum Blinds</a></h5>
+                                            <h5><a href="aliminum.html">Aluminum Blinds</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -388,7 +391,7 @@
                                 <div class="text">
                                     <h2>Delivery &amp; Fitting Guide</h2>
                                     <p>Once your Roman shades are ordered, they are manufactured to size and carefully finished so the folds stack evenly and the fabric hangs smoothly. When your order is ready, our installation team returns to your home to fit each shade, test the operation and make any final adjustments.</p>
-                                    <p>For information on current lead times, measuring and installation, or to book your free in-home consultation in Toronto &amp; the GTA, call us at <a href="tel:+14379955552">(437) 995-5552</a> or reach out via our contact form.</p>
+                                    <p>For information on current lead times, measuring and installation, or to book your free in-home consultation in Toronto &amp; the GTA, call us at <a href="tel:+14169853839">(416)985-3839</a> or reach out via our contact form.</p>
                                 </div>
                             </div>
                         </div>
@@ -430,7 +433,7 @@
                                     <div class="widget-content">
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
-                                            <li><a href="index.html">Blinds</a></li>
+                                            <li><a href="index.html">Products</a></li>
                                             <li><a href="index.html">Curtains</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
@@ -441,14 +444,17 @@
                             <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                                 <div class="footer-widget links-widget ml-70">
                                     <div class="widget-title">
-                                        <h3>Blinds</h3>
+                                        <h3>Products</h3>
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links clearfix">                                          
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
+                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>                                    
                                             <li><a href="dual_blackout.html">Dual Blackout Shades</a></li>                                    
@@ -464,7 +470,7 @@
                                             <li><a href="graphic.html">Graphic Blinds</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout_curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
@@ -489,9 +495,9 @@
 
 
         <!--Scroll to top-->
-        <button class="scroll-top scroll-to-target" data-target="html">
-            <span class="far fa-long-arrow-alt-up"></span>
-        </button>
+        <a class="scroll-top whatsapp-btn" href="https://wa.me/14169853839" target="_blank" rel="noopener">
+            <span class="fab fa-whatsapp"></span>
+        </a>
     </div>
 
 
