--- a/silhouette.html
+++ b/silhouette.html
@@ -112,13 +112,16 @@
                                         <ul>
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy Curtains</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Pile, Pleat &amp; Pinch Drapery</a></li>
+                                            <li><a href="rods.html">Rod &amp; Track Hardware</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>
                                             <li><a href="graphic.html">Graphic Blind</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
                                             <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
@@ -132,7 +135,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Book Your Free Consultation</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -157,7 +160,7 @@
                             <li class="support-box">
                                 <i class="icon-phone"></i>
                                 <p>Call Us</p>
-                                <h3><a href="tel:+14379955552">(437) 995-5552</a></h3>
+                                <h3><a href="tel:+14169853839">(416)985-3839</a></h3>
                             </li>
                         </ul>
                     </div>
@@ -181,9 +184,9 @@
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Toronto &amp; GTA</li>
-                        <li><a href="tel:+14379955552">(437) 995-5552</a></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li>7181 Yonge Street, Unit 79, Thornhill, ON, L3T 0C7</li>
+                        <li><a href="tel:+14169853839">(416)985-3839</a></li>
+                        <li><a href="mailto:info@captainblinds.com">info@captainblinds.com</a></li>
                     </ul>
                 </div>
                 <div class="social-links">
@@ -265,7 +268,7 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="aliminum.html">Aliminum Blinds</a></h5>
+                                            <h5><a href="aliminum.html">Aluminum Blinds</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -390,7 +393,7 @@
                                 <div class="text">
                                     <h2>Delivery &amp; Fitting Guide</h2>
                                     <p>After you’ve selected your fabrics and options, your Silhouette-style shades are custom-made to your window sizes. When they’re ready, our installers return to fit the shades, check the lift and tilt mechanisms, and make final adjustments so the sheers fall smoothly and the vanes align perfectly.</p>
-                                    <p>For more information about lead times, measuring and installation, or to schedule a free consultation in Toronto &amp; the GTA, call us at <a href="tel:+14379955552">(437) 995-5552</a> or contact us through our online form.</p>
+                                    <p>For more information about lead times, measuring and installation, or to schedule a free consultation in Toronto &amp; the GTA, call us at <a href="tel:+14169853839">(416)985-3839</a> or contact us through our online form.</p>
                                 </div>
                             </div>
                         </div>
@@ -432,7 +435,7 @@
                                     <div class="widget-content">
                                         <ul class="links clearfix">
                                             <li><a href="about.html">About Us</a></li>
-                                            <li><a href="index.html">Blinds</a></li>
+                                            <li><a href="index.html">Products</a></li>
                                             <li><a href="index.html">Curtains</a></li>
                                             <li><a href="index.html">Contact Us</a></li>
                                             <li><a href="index.html#contact">Ask for a Quote</a></li>
@@ -444,13 +447,14 @@
                             <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                                 <div class="footer-widget links-widget ml-70">
                                     <div class="widget-title">
-                                        <h3>Blinds</h3>
+                                        <h3>Products</h3>
                                         <div class="shape"></div> 
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links clearfix">
                                             <li><a href="zebra_blinds.html">Zebra Blinds</a></li>
                                             <li><a href="roller_blinds.html">Roller Shades</a></li>
+                                            <li><a href="honeycomb.html">Honeycomb Shades</a></li>
                                             <li><a href="silhouette.html">Silhouette</a></li>
                                             <li><a href="wood.html">Wood Blinds</a></li>
                                             <li><a href="roman_blinds.html">Roman Shades</a></li>
@@ -471,7 +475,7 @@
                                             <li><a href="graphic.html">Graphic Blinds</a></li>
                                             <li><a href="outdoor.html">Outdoor Shades</a></li>
                                             <li><a href="laser.html">Laser Roller Shades</a></li>
-                                            <li><a href="aliminum.html">Aliminum Blinds</a></li>
+                                            <li><a href="aliminum.html">Aluminum Blinds</a></li>
                                             <li><a href="blackout curtains.html">Blackout Roller Shades</a></li>
                                             <li><a href="smart.html">Motorization &amp; Smart Home Solutions</a></li>
                                         </ul>
@@ -495,9 +499,9 @@
 
 
         <!--Scroll to top-->
-        <button class="scroll-top scroll-to-target" data-target="html">
-            <span class="far fa-long-arrow-alt-up"></span>
-        </button>
+        <a class="scroll-top whatsapp-btn" href="https://wa.me/14169853839" target="_blank" rel="noopener">
+            <span class="fab fa-whatsapp"></span>
+        </a>
     </div>
 
 
