--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
                                     <p>Our range includes innovative, stylish and energy-efficient blinds, shades, shutters, aluminium and wood blinds. Whether you are a homeowner, contractor or hospitality client, we offer both custom and ready-made solutions backed by a team that genuinely prioritizes customer satisfaction.</p>
                                 </div>
                                 <div class="inner-box">
-                                    <figure class="vector-image"><img src="assets/images/resource/vector-image-1.png" alt="Decorative pattern behind CaptainBlinds description"></figure>
+                                    <figure class="vector-image"><img src="assets/images/about1.jpg" alt="Decorative pattern behind CaptainBlinds description"></figure>
                                     <div class="inner clearfix">
                                         <ul class="list-item">
                                             <li>Diverse blinds, shades &amp; shutters</li>
@@ -312,7 +312,7 @@
                             <div class="row clearfix align-items-center">
                                 <div class="col-lg-6 col-md-6 col-sm-12 image-column">
                                     <div class="image-box">
-                                        <figure class="image"><img src="assets/images/resource/history-1.jpg" alt="Display of blinds, shades and shutters"></figure>
+                                        <figure class="image"><img src="assets/images/resource/history-2.jpg" alt="Display of blinds, shades and shutters"></figure>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 content-column">
@@ -336,7 +336,7 @@
                             <div class="row clearfix align-items-center">
                                 <div class="col-lg-6 col-md-6 col-sm-12 image-column">
                                     <div class="image-box">
-                                        <figure class="image"><img src="assets/images/resource/history-1.jpg" alt="Commercial and hospitality window covering solutions"></figure>
+                                        <figure class="image"><img src="assets/images/resource/history-3.jpg" alt="Commercial and hospitality window covering solutions"></figure>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 content-column">
@@ -360,7 +360,7 @@
                             <div class="row clearfix align-items-center">
                                 <div class="col-lg-6 col-md-6 col-sm-12 image-column">
                                     <div class="image-box">
-                                        <figure class="image"><img src="assets/images/resource/history-1.jpg" alt="Motorized blinds and smart home integration"></figure>
+                                        <figure class="image"><img src="assets/images/resource/history-4.jpg" alt="Motorized blinds and smart home integration"></figure>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 content-column">
@@ -384,7 +384,7 @@
                             <div class="row clearfix align-items-center">
                                 <div class="col-lg-6 col-md-6 col-sm-12 image-column">
                                     <div class="image-box">
-                                        <figure class="image"><img src="assets/images/resource/history-1.jpg" alt="Finished interior with CaptainBlinds window coverings"></figure>
+                                        <figure class="image"><img src="assets/images/resource/history-5.jpg" alt="Finished interior with CaptainBlinds window coverings"></figure>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 content-column">
@@ -506,32 +506,6 @@
                                     </div>
                                 </form>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-column pull-left">
-                    <div class="map-inner">
-                        <div class="google-map" 
-                            id="contact-google-map" 
-                            data-map-lat="40.712776" 
-                            data-map-lng="-74.005974" 
-                            data-icon-path="assets/images/icons/map-marker.png"  
-                            data-map-title="Brooklyn, New York, United Kingdom" 
-                            data-map-zoom="12" 
-                            data-markers='{
-                                "marker-1": [40.712776, -74.005974, "<h4>Branch Office</h4><p>77/99 New York</p>","assets/images/icons/map-marker.png"]
-                            }'>
-
-                        </div>
-                        <div class="map-info">
-                            <div class="text">
-                                <p>Visit The Store</p>
-                                <h4>85 Twin City Towers Newyork, USA</h4>
-                            </div>
-                            <ul class="info clearfix">
-                                <li>Phone <a href="tel:1258985703">1-258-985-703</a></li>
-                                <li>Email <a href="mailto:info@captainblinds.com">info@captainblinds.com</a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
