--- a/window-blinds-for-each-room.html
+++ b/window-blinds-for-each-room.html
@@ -65,6 +65,7 @@
 <link href="assets/css/global.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
 <link href="assets/css/responsive.css" rel="stylesheet">
+  <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </head> <body> <div class="boxed_wrapper">
     <!-- main header (copied from zebra_blinds.html) -->
     <header class="main-header style-one">
