--- a/clients-element.html
+++ b/clients-element.html
@@ -26,6 +26,7 @@
 <link href="assets/css/style.css" rel="stylesheet">
 <link href="assets/css/responsive.css" rel="stylesheet">
 
+  <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </head>
 
 
