--- a/gallery-1.html
+++ b/gallery-1.html
@@ -72,6 +72,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
 
+  <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </head>
 
 
